--- a/OnlineClasses_API.Services/OnlineClasses_API.Services.csproj
+++ b/OnlineClasses_API.Services/OnlineClasses_API.Services.csproj
@@ -5,5 +5,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="13.0.1" />
+		<PackageReference Include="Azure.Storage.Blobs" Version="12.22.0" />
 
+		<PackageReference Include="SendGrid" Version="9.28.1" />
+		<PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\OnlineClasses_API.Core\OnlineClasses_API.Core.csproj" />
+	  <ProjectReference Include="..\OnlineClasses_API.Data\OnlineClasses_API.Data.csproj" />
+	</ItemGroup>
 </Project>
