DBContext setup and testing

--- a/OnlineClasses_API.Data/OnlineClasses_API.Data.csproj
+++ b/OnlineClasses_API.Data/OnlineClasses_API.Data.csproj
@@ -15,6 +15,6 @@
 		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
 	</ItemGroup>
 	<ItemGroup>
-	
+	  <ProjectReference Include="..\OnlineClasses_API.Core\OnlineClasses_API.Core.csproj" />
 	</ItemGroup>
 </Project>
