--- a/OnlineClasses_API/appsettings.Development.json
+++ b/OnlineClasses_API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DbContext": "Server=DESKTOP-EV4EBG3\\SQLEXPRESS;Initial Catalog=OnlineCourseDB;Integrated Security=SSPI; MultipleActiveResultSets=true;TrustServerCertificate=True;"
   }
 }
